update clion_user_guide.md drafts